--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Dicee</title>
-    	<link rel="stylesheet" href="css/style.css">
+    	<link rel="stylesheet" href="style.css">
   </head>
   <body>
 
@@ -12,16 +12,16 @@
 
       <div class="dice col_one">
         <p>Player 1</p>
-        <img class="img1" src="Dice/images/dice6.png">
+        <img class="img1" src="dice6.png">
       </div>
 
       <div class="dice col_two">
         <p>Player 2</p>
-        <img class="img2" src="Dice/images/dice6.png">
+        <img class="img2" src="dice6.png">
       </div>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
     
     <div class="hidden_one  ">
          <h1>Player 1 Win</h>
